--- a/src/css/app.less
+++ b/src/css/app.less
@@ -16,6 +16,16 @@
             float: left;
             margin-right: 10px;
             background-color: #ffffff;
+            .zc-main-flex-menu {
+                .zc-main-flex-menu-list {
+                    margin: 0;
+                    padding: 0;
+                    .zc-main-flex-menu-list-li {
+                        float: left;
+                        margin-right: 10px;
+                    }
+                }
+            }
         }
     }
 }
