--- a/src/css/app.css
+++ b/src/css/app.css
@@ -19,3 +19,11 @@
   margin-right: 10px;
   background-color: #ffffff;
 }
+.zc .zc-main .zc-main-flex .zc-main-flex-menu .zc-main-flex-menu-list {
+  margin: 0;
+  padding: 0;
+}
+.zc .zc-main .zc-main-flex .zc-main-flex-menu .zc-main-flex-menu-list .zc-main-flex-menu-list-li {
+  float: left;
+  margin-right: 10px;
+}
