--- a/src/view/line.html
+++ b/src/view/line.html
@@ -6,5 +6,6 @@
     <div class="zc-l-clear"></div>
     <div class="zc-m-icon-bubble">{{bubbleText}}</div>
   </div>
-  <div class="zc-c-chart-line"></div>
+  <!-- <div class="zc-c-chart-line" style="width: 100%;height: 100%"></div> -->
 </div>
+<div class="zc-c-chart-line" style="width: 100%;height: 100%"></div>
