--- a/src/view/pie.html
+++ b/src/view/pie.html
@@ -6,5 +6,6 @@
     <div class="zc-l-clear"></div>
     <div class="zc-m-icon-bubble">{{bubbleText}}</div>
   </div>
-  <div class="zc-c-chart-pie"></div>
+  <!-- <div class="zc-c-chart-pie" style="width: 100%;height: 100%"></div> -->
 </div>
+<div class="zc-c-chart-pie" style="width: 100%;height: 100%"></div>
